packages/webawesome/src/styles/themes/awesome.css
/* ... */
@layer wa-theme-dimension {
  .wa-theme-awesome {
    wa-button,
    button,
    input[type='button'],
    input[type='reset'],
    input[type='submit'],
    a.wa-button {
      --wa-color-shadow: var(--wa-color-border-normal);
      --wa-transition-slow: 0;
      --wa-transition-normal: 0;
      --wa-transition-fast: 0;

      &[appearance='outlined'],
      &.wa-outlined:not(.wa-filled) {
        --wa-color-shadow: var(--wa-color-border-loud);
      }
    }

    wa-button,
    button,
    input[type='button'],
    input[type='reset'],
    input[type='submit'],
    a.wa-button {
      &:not([appearance~='plain']):not(.wa-plain) {
        &:where(:not(wa-button)),
        &::part(base) {
          height: calc(var(--wa-form-control-height) - var(--wa-shadow-offset-y-s));
          margin-bottom: var(--wa-shadow-offset-y-s);
          margin-right: var(--wa-shadow-offset-x-s);
          box-shadow: var(--wa-shadow-offset-x-s) var(--wa-shadow-offset-y-s) 0 0 var(--wa-color-shadow);
        }
        &:not([disabled]):not(:disabled):active {
          &:where(:not(wa-button)),
          &::part(base) {
            color: var(--wa-color-fill-quiet);
            background-color: var(--wa-color-shadow);
            border-color: var(--wa-color-shadow);
            box-shadow: none;
            transform: translate(var(--wa-shadow-offset-x-s), var(--wa-shadow-offset-y-s));
          }
        }
      }
      .wa-dark & {
        &[appearance~='accent'],
        &.wa-accent {
          &:not([disabled]):not(:disabled):active {
            &:where(:not(wa-button)),
            &::part(base) {
              color: var(--wa-color-on-quiet);
            }
          }
        }
      }
    }

    wa-radio[appearance='button'] {
      &:state(checked) {
        background-color: var(--wa-form-control-activated-color);
        border-color: var(--wa-form-control-activated-color);
        color: var(--wa-color-surface-default);
      }
    }
    wa-radio-group[orientation='horizontal'] wa-radio[appearance='button'] {
      box-shadow: var(--wa-shadow-offset-x-s) max(var(--wa-shadow-offset-y-s), var(--border-width)) 0 0
        var(--wa-form-control-border-color);
      margin-bottom: var(--wa-shadow-offset-y-s);
      margin-right: var(--wa-shadow-offset-x-s);

      &:state(checked) {
        box-shadow: initial;
        transform: translate(var(--wa-shadow-offset-x-s), var(--wa-shadow-offset-y-s));
      }
    }

    :is(
        input:where(
            :not(
              [type='button'],
              [type='checkbox'],
              [type='color'],
              [type='file'],
              [type='hidden'],
              [type='image'],
              [type='radio'],
              [type='range'],
              [type='reset'],
              [type='submit']
            )
          ),
        select,
        textarea,
        wa-input,
        wa-select,
        wa-textarea
      ):not(:focus):not([appearance='filled']) {
      &:where(:not(wa-input):not(wa-select):not(wa-textarea)),
      &:where(wa-input)::part(base),
      &:where(wa-select)::part(combobox),
      &:where(wa-textarea)::part(base) {
        box-shadow: inset var(--wa-shadow-offset-x-s)
          max(var(--wa-shadow-offset-y-s), var(--wa-form-control-border-width)) 0 0 var(--wa-color-shadow);
      }
    }
  }
}

@layer wa-theme-overrides {
  .wa-theme-awesome {
    wa-button,
    button,
    input[type='button'],
    input[type='reset'],
    input[type='submit'],
    a.wa-button {
      &[appearance='accent'],
      &.wa-accent {
        &:where(:not(wa-button)),
        &::part(base) {
          --wa-color-shadow: var(--wa-color-on-loud);
          border-color: var(--wa-color-shadow);
        }
      }

      .wa-dark & {
        &[appearance='accent'],
        &.wa-accent {
          &:where(:not(wa-button)),
          &::part(base) {
            --wa-color-shadow: var(--wa-color-border-quiet);
          }
        }
      }
    }

    /* Treat accent buttons as outlined in button groups */
    wa-button-group[orientation='horizontal'] {
      wa-button[appearance='accent'] {
        margin-inline-start: var(--_button-horizontal-indent-outlined);
      }
    }
    wa-button-group[orientation='vertical'] {
      wa-button[appearance='accent'] {
        margin-block-start: var(--_button-vertical-indent-outlined);
      }
    }

    wa-badge {
      border-radius: var(--wa-border-radius-m);
      font-weight: var(--wa-font-weight-bold);
      text-transform: uppercase;
    }

    wa-callout {
      &:is([appearance~='outlined']) {
        border-color: var(--wa-color-border-normal);
      }
    }

    wa-card {
      background-color: var(--wa-color-surface-raised);
    }
    wa-card::part(header) {
      border-bottom-style: dotted;
    }
    wa-card::part(footer) {
      border-top-style: dotted;
    }

    input[type='checkbox'],
    wa-checkbox,
    wa-tree-item::part(checkbox__control) {
      --checked-icon-color: var(--wa-color-surface-default);
    }

    wa-switch {
      --height: 1.5em;
    }

    wa-tag {
      font-weight: var(--wa-font-weight-bold);
    }
  }
}

